# tensors-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
include/: avg_pooling.h  convolution.h  cuda_memory.h  matrix.h  matrix_tests.h  max_pooling.h  padding.h  relu_activation.h  sigmoid_activation.h  softmax.h  tensor.h
include/cpu/: cpu_avg_pooling.h  cpu_convolution.h  cpu_matrixes.h  cpu_max_pooling.h  cpu_tensors.h  padding.h
include/cuda/: cuda_convolution.h  cuda_matrixes.h  cuda_max_pooling.h  cuda_precision.h  cuda_tensors.h
src/: avg_pooling.cpp  convolution.cpp  cuda_kernels.cu  cuda_matrix_kernels.cu  cuda_memory.cu  cuda_tensor_kernels.cu  main.cpp  matrix.cpp  max_pooling.cpp  padding.cpp  relu_activation.cpp  sigmoid_activation.cpp  softmax.cpp  tensor.cpp
src/cpu/: cpu_avg_pooling.cpp  cpu_convolution.cpp  cpu_matrixes.cpp  cpu_max_pooling.cpp  cpu_tensors.cpp  padding.cpp
src/cuda/: cuda_matrix_kernels.cu  cuda_memory.cu  cuda_precision.cpp
tests/: activation_tests.cpp  convolution_tests.cpp  matrix_tests.cpp  padding_tests.cpp  pooling_tests.cpp  tensor_tests.cpp  test_main.cpp  transposition_tests.cpp
